# writing-org-bot

./: Cargo.toml
src/: announcer.rs  auth.rs  consts.rs  csv.rs  discord.rs  main.rs  req.rs  test.rs
