[package]
name = "wg-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls"] } # Web Server
awc = { version = "3", features = ["rustls"] }       # Requests
ed25519-dalek = "2"                                  # Signature verification
env_logger = "0.10"                                  # Logging
serde = { version = "1", features = ["derive"] }     # Derives
serde_json = "1"                                     # JSON
