[package]
name = "wg-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }      # Web server
chrono = "0.4"                                            # Event times
ed25519-dalek = "2"                                       # Signatures
env_logger = "0.10"                                       # Logging
futures = "0.3"                                           # Select
reqwest = { version = "0.11", features = ["rustls-tls"] } # Requests
serde = { version = "1", features = ["derive"] }          # Derives
serde_json = "1"                                          # JSON
tokio = { version = "1.34", features = ["fs"] }           # MPSC, fs
